OO refactor of CLI

--- a/README.Rmd
+++ b/README.Rmd
@@ -60,9 +60,10 @@ library(rye)
 
 # Start the REPL
 engine <- RyeEngine$new()
-engine$load_stdlib()
 engine$repl()
 ```
+
+The engine loads the base stdlib automatically.
 
 ## Command Line
 
