--- a/README.Rmd
+++ b/README.Rmd
@@ -152,6 +152,9 @@ export PATH="$(Rscript -e 'cat(dirname(system.file("exec", "rye", package = "rye
 - `begin` - Sequence of expressions
 - `defmacro` - Define macros
 - `quasiquote` / `` ` `` - Template with selective evaluation
+- `load` - Load and evaluate a file
+- `import` - Import a module's exports
+- `module` - Define a module with exports
 - `~` - Formula (for R modeling)
 
 ### Continuations
@@ -241,6 +244,9 @@ Additional Rye stdlib modules live in `inst/rye` so you can load just what you n
 (load "threading") ; -> and ->>
 (load "error")     ; try/catch/finally
 ```
+
+You can also create your own modules with the `module` and `import` special forms.
+See the [Modules and Imports](articles/modules.html) guide for details.
 
 ### Examples
 
