--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -100,6 +100,8 @@ The engine loads the base stdlib. You can load extra modules from `inst/rye`:
 (load "error")
 ```
 
+You can also use `import` to load modules with explicit exports. See [Modules and Imports](modules.html) for details on creating and importing modules.
+
 ## Core syntax
 
 ```lisp
@@ -138,6 +140,7 @@ this package.
 
 ## Next steps
 
+- [Modules and Imports](modules.html)
 - [Macros and Quasiquote](macros.html)
 - [R Interop and Data Workflows](r-interop.html)
 - [Standard Library Overview](stdlib-reference.html)
