--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
+o) can we get rid of evaluator$do_call and evaluator$do_call_impl?
 o) rework r/call
-o) remove apply, rename to funcall and define in rye
-o) do.call? is this usable directly? why do we have evaluator$do_call and evaluator$do_call_impl?
+o) format-value should support environments (and subclasses like dict?)
 
 o) improve variadic argument handling -- utilities?
+o) we can do this with the test case of moving identical? over
 
 o) fix 2 warnings in tests
 
