--- a/TODO
+++ b/TODO
@@ -1,12 +1,14 @@
+o) what else in base R has this sort of substitute behavior as suppressWarnings that we need to macro-wrap?
+
+o) update the (license) function, should wrap it
+
+o) &optional or similar syntax for lambda
+o) can macros have docstrings?
 o) replace while-r and for-r with appropriate handling of loops in the evaluator?
 o) for* and while* absolutely should not be tail recursive if they are
 o) loop macro is wildly overcomplicated. factor it out?
 
-o) update the (license) function, should wrap it
-
 o) we should change the equality system again: identical? doesn't need special handling and can be an alias; rather equal? should take a kwarg identical which says to use identical; otherwise it should use ==; or maybe kwarg strict or kwarg permissive
-
-o) fix 2 warnings in tests
 
 o) FIXME in tests about keyword arg syntax
 
