--- a/TODO
+++ b/TODO
@@ -1,14 +1,18 @@
-o) replace while-r and for-r with appropriate handling of loops in the evaluator?
-o) for* and while* absolutely should not be tail recursive if they are
-
-o) several circularities in the stdlib. equality for example should be in core
+o) there's a tail recursive pattern in ==! eliminate any tail recursion. update AGENTS.md and CLAUDE.md to say this
+o) fix while* and for*
 
 --------------------------------------
 o) look at the test behavior: any tests that look obviously bad? anywhere it's not what a lisp should do? identify questionable choices that may reflect encoding bugs into tests
 
-o) bench-eval and bench-e2e fail
+o) this stdlib is very poorly organized, has undocumented dependencies on prior import order, needs to be refactored
+o) several circularities in the stdlib. equality for example should be in core
+
 o) performance optimizations: use profiling and benchmarking
+    o) the evaluator is too dynamic and creates way too many stack frames per rye call. this is presumably the main performance bottleneck
 
 o) documentation updates / systematizing: make a plan
 
+--------------------------------------
+small stuff:
 o) minor pkgdown warning about site url
+o) recursion-related FIXMEs (reenable some code) in benchmarks after evaluator improvements
