update assq/assv/assoc to R's equality predicates

--- a/TODO
+++ b/TODO
@@ -1,21 +1,16 @@
 o) fix while* and for*
 
-o) assq and assv: these still act like pointer equality is available; probably we should have both raise an error and provide "assi" that uses identical?
-
 o) there's a tail recursive pattern in ==! eliminate any tail recursion.
 
 o) I think import has an issue: if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
 
+o) fix the minor issues from opus auditing the tests
+
+o) pairlist support
+
 --------------------------------------
-o) have Opus 4.5 critique the tests:
-```
-Take a look at the tests in tests/, maybe especially the native ones in tests/native/. Keep in mind that the language being tested is supposed to be a lisp, generally scheme-like, but implemented on top of R. So that makes for a few peculiarities -- R's type system, no tail call optimization, the whole "r/call" apparatus, the lack of pointer equality for eq? and eqv?, etc.
 
-Given that, let's critique these tests. Is there any behavior they implement that they clearly shouldn't? Mistaken behavior of the interpreter we have now that's been hardcoded into the tests? You're looking for things that clearly don't make sense and aren't how an R-based lisp should behave. Use your judgment!
-```
-
-o) this stdlib is very poorly organized, has undocumented dependencies on prior import order, needs to be refactored
-o) several circularities in the stdlib. equality for example should be in core
+o) stdlib is poorly organized, has circularities, undeclared deps on prior import order, needs refactor
 
 o) the evaluator is a dynamic, recursive AST walker and creates way too many stack frames per rye call.
   o) this is the main performance bottleneck.
