--- a/TODO
+++ b/TODO
@@ -1,13 +1,12 @@
+o) the cli is kinda fragile and ugly. replace it? cli package?
+
 o) fix while* and for*
 
 o) there's a tail recursive pattern in ==! eliminate any tail recursion.
 
-o) I think import has an issue: if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
-
 o) fix the minor issues from opus auditing the tests
 
-o) pairlist support
-
+o) I think import has an issue: if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
 --------------------------------------
 
 o) stdlib is poorly organized, has circularities, undeclared deps on prior import order, needs refactor
