REPL: robustness, --quiet, bracket paste, hist opts
- Send REPL errors to stderr; flush after print_value and print_error
- Treat "Unterminated string" as incomplete so multi-line strings
  continue
- Shorten banner when rye.repl_quiet is TRUE (e.g. CLI -q/--quiet)
- Add CLI -q/--quiet; update help and usage
- Add rye.repl_use_history (default TRUE); when FALSE, do not
  load/save/add readline history so R's history is untouched when REPL
  runs from R
- Enable bracketed paste mode (BPM): send \033[?2004h/l; in input_line(),
  detect \033[200~...\033[201~ and return pasted block as one chunk
- Cache utils::addHistory in history_state
- Document REPL options in roxygen (rye.repl_quiet,
  rye.repl_use_history, rye.repl_bracketed_paste, override contract)
- Tests: Unterminated string incomplete, multi-line first chunk,
  BPM-style paste, evaluation error (capture stderr), --quiet/-q,
  rye.repl_use_history
- Getting-started vignette: mention -q and REPL options

--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -54,9 +54,12 @@ Then you can evaluate code without opening R:
 ```bash
 rye --eval "(+ 1 2)"
 rye --file script.rye
+rye -q
 ```
 
-You can also pass multiple files; they run in order.
+You can also pass multiple files; they run in order. Use `-q` or `--quiet` to start the REPL with a minimal banner.
+
+**REPL options (when running from R):** You can control the REPL with options before calling `engine$repl()`: `rye.repl_quiet` (minimal banner), `rye.repl_use_history` (set to `FALSE` to avoid touching R's readline history), and `rye.repl_bracketed_paste` (enable/disable bracketed paste mode for cleaner multiline pastes).
 
 ## Evaluate Rye from R
 
