--- a/TODO
+++ b/TODO
@@ -1,12 +1,15 @@
-o) the repl is also kinda fragile and ugly. replace it?
-
+medium stuff:
+--------------------------------------
 o) turn the pairlists into an R6 class?
 
 o) fix the minor issues from opus auditing the tests
 
-o) I think import has an issue: if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
---------------------------------------
+o) equal? behavior for dict and set and friends, environment-based objects: this needs recursive environment handling. for bare environments, should we do pointer equality? (this is I think what scheme does?)
 
+o) I think import has an issue: if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
+
+big stuff:
+--------------------------------------
 o) stdlib is poorly organized, has circularities, undeclared deps on prior import order, needs refactor
 
 o) the evaluator is a dynamic, recursive AST walker and creates way too many stack frames per rye call.
@@ -14,13 +17,12 @@ o) the evaluator is a dynamic, recursive AST walker and creates way too many sta
   o) option 1: replace it with an AST-to-R compiler which will also kill off the translator program we have now.
   o) option 2: we can walk the AST more carefully, nonrecursively, maybe by explicitly treating the R language object we get as a graph. (evaluate the AST nodes in a postorder traversal with an explicit stack and caching, right? any scoping subtleties this misses?) this is a much smaller change.
   o) option 3: can we build the input AST a bit differently or provide helpers so that the entire evaluator is just a call to R's eval()?
+  o) recursion-related FIXMEs (reenable some code) in benchmarks after evaluator improvements
 
 o) other performance optimizations: use profiling and benchmarking
 
 o) documentation updates / systematizing: make a plan
 
---------------------------------------
 small stuff:
+--------------------------------------
 o) minor pkgdown warning about site url
-o) recursion-related FIXMEs (reenable some code) in benchmarks after evaluator improvements
-o) equal? behavior for dict and set and friends, environment-based objects: this needs recursive environment handling. for bare environments, should we do pointer equality? (this is I think what scheme does?)
