--- a/TODO
+++ b/TODO
@@ -1,16 +1,13 @@
 medium stuff:
 --------------------------------------
-o) turn the pairlists into an R6 class?
+o) turn the pairlists into an R6 class
 
 o) fix the minor issues from opus auditing the tests
-
-o) equal? behavior for dict and set and friends, environment-based objects: this needs recursive environment handling. for bare environments, should we do pointer equality? (this is I think what scheme does?)
-
-o) I think import has an issue: if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
 
 big stuff:
 --------------------------------------
 o) stdlib is poorly organized, has circularities, undeclared deps on prior import order, needs refactor
+  o) closely related: import has an issue. if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
 
 o) the evaluator is a dynamic, recursive AST walker and creates way too many stack frames per rye call.
   o) this is the main performance bottleneck.
@@ -26,3 +23,4 @@ o) documentation updates / systematizing: make a plan
 small stuff:
 --------------------------------------
 o) minor pkgdown warning about site url
+o) get pkgdown to stop including AGENTS.md and CLAUDE.md
