Refactor cons cells to R6 class RyeCons
- Replace list-based rye_cons with R6 class RyeCons (car, cdr, as_list(), parts()).
- Add r6_isinstance() and r6_issubclass() in utils.R; use r6_isinstance(x, "RyeCons") everywhere instead of inherits(x, "rye_cons").
- Parser uses RyeCons$new(); engine binds constructor and predicate inline; eval/rye-env use r6_isinstance and $parts().
- Keep rye_cons, rye_cons_p, rye_cons_as_list, rye_cons_parts as package helpers for r/call from Rye stdlib (get from globalenv).
- Check dotted-pair in format-value before environment so RyeCons prints as (a . b) not <RyeCons, R6>.
- Tests updated to r6_isinstance(x, "RyeCons").

--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
 medium stuff:
 --------------------------------------
-o) turn the pairlists into an R6 class
-o) remove exports of rye_cons_p etc
 o) tests fail when R CMD check runs them
+
+o) change inherits where appropriate to r6_isinstance
+
+o) remove rye_cons_p etc
+
+o) fix failing repl tests
 
 o) fix the minor issues from opus auditing the tests
 
