Use r6_isinstance for R6 class checks (RyeEnv, EvalContext)
Replace inherits(..., "RyeEnv") and inherits(..., "EvalContext") with
r6_isinstance() in R/eval.R, R/rye-engine.R, R/macro.R, R/help-system.R,
and R/module-registry.R. Leaves other inherits() calls unchanged (S3
types like rye_closure, rye_keyword, rye_promise, and get/exists
inherits= arguments).

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 medium stuff:
 --------------------------------------
-o) change inherits where appropriate to r6_isinstance
+o) refactor rye promises to also be an R6 class? and update inherits checks
 
 o) remove rye_cons_p etc -- avoid "r/call", we don't now need it
 o) tests fail when R CMD check runs them
