Refactor promises to R6 (RyePromise)
- Replace S3/environment promise representation with R6 class RyePromise,
  matching the RyeCons pattern: promise?, force, and promise-expr use
  r6_isinstance() and $value() / $get_expr().
- Evaluator$promise_new() now returns RyePromise$new(expr, env, eval_in_env).
- Define RyePromise in the same file as RyeCons; rename cons.R to cells.R
  so the file still loads before eval.R without using Collate in DESCRIPTION.
- Add a short comment in cells.R explaining load-order requirements.
- Inline promise binding names in RyePromise (no key constants).
- Update test-special-forms.R to assert r6_isinstance(result, "RyePromise")
  for delay.

--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
 medium stuff:
 --------------------------------------
-o) refactor rye promises to also be an R6 class? and update inherits checks
-
 o) remove rye_cons_p etc -- avoid "r/call", we don't now need it
-o) tests fail when R CMD check runs them
+o) should fix tests failing when R CMD check runs them
 
 o) fix the minor issues from opus auditing the tests
 
