Replace rye_cons_* globals with stdlib primitives; split pair? vs list-or-pair?
- Remove rye_cons, rye_cons_p, rye_cons_as_list, rye_cons_parts from R/cells.R
  so the package no longer relies on globalenv/attach for cons helpers.

- Bind __cons, pair?, __cons-as-list, __cons-parts in the engine stdlib env
  (R/rye-engine.R) and use them from Rye stdlib instead of r/call "rye_cons*".

- Make pair? the dotted-pair (RyeCons) primitive; rename the previous pair?
  (non-empty list or dotted pair) to list-or-pair? and update all references
  and docs so pair? matches R/Scheme “pairlist cell” semantics.

--- a/README.Rmd
+++ b/README.Rmd
@@ -200,7 +200,7 @@ access to all base R functions.
 - `repeatedly`, `repeat`
 
 **Predicates:**
-- `null?`, `nil?`, `list?`, `pair?`, `symbol?`, `keyword?`
+- `null?`, `nil?`, `list?`, `pair?`, `list-or-pair?`, `symbol?`, `keyword?`
 - `number?`, `string?`, `vector?`, `true?`, `false?`, `fn?`, `callable?`
 
 **Control Flow Macros:**
