--- a/vignettes/stdlib-reference.Rmd
+++ b/vignettes/stdlib-reference.Rmd
@@ -60,7 +60,7 @@ engine <- RyeEngine$new()
 
 ## Predicates
 
-`null?`, `nil?`, `list?`, `pair?`, `symbol?`, `keyword?`,
+`null?`, `nil?`, `list?`, `pair?`, `list-or-pair?`, `symbol?`, `keyword?`,
 `number?`, `string?`, `vector?`, `true?`, `false?`, `fn?`, `callable?`
 
 ## Control flow macros
