--- a/TODO
+++ b/TODO
@@ -1,8 +1,17 @@
 stdlib cleanup:
 -------------------------------------------------
 o) stdlib is poorly organized, has circularities, undeclared deps on prior import order, needs refactor
-    o) fix the minor issues from opus auditing the tests
-  o) closely related: import has an issue. if executed at any prior point, the symbols exported from that module seem to be in scope even in modules that didn't import them. the module registry should have them but we need to fix the scoping rules? is this how scheme works? how does R work? in any case it seems like better design and would catch a lot of stdlib issues
+  o) update docs?
+
+  ```
+  +  # Load stdlib modules needed for tests (assert needs core, predicates, strings, dict)
+  +  for (module in c("control", "binding", "strings", "math", "predicates", "list", "higher-order", "sequences", "looping", "dict", "core", "assert")) {
+  ```
+
+  o) can we import arbitrary non-stdlib modules? does import work for this?
+  o) can you "import" without first running "load" to define the module? this seems a bit broken
+
+o) fix the minor issues from opus auditing the tests
 
 o) have opus audit the tests again afterward:
 ```
